<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

  <ImageView
      android:id="@+id/details_layout_horizontal_divier"
      android:layout_width="0dp"
      android:layout_height="wrap_content"

      android:layout_marginTop="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@android:drawable/screen_background_dark_transparent"
      />
  <ImageView
      android:id="@+id/details_layout_horizontal_divier2"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:layout_marginTop="16dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/details_layout_tv_fuel"
      app:srcCompat="@android:drawable/screen_background_dark_transparent"
      />
  <TextView
      android:id="@+id/details_layout_vehicle_info_label"
      android:layout_width="379dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/vehicle_info"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />
  <TextView
      android:id="@+id/textView10"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:text="@string/location"
      android:textAlignment="viewEnd"
      app:layout_constraintBaseline_toBaselineOf="@+id/details_layout_tv_location"
      app:layout_constraintEnd_toStartOf="@+id/guideline2"
      app:layout_constraintStart_toStartOf="@+id/details_layout_vehicle_info_label"
      />
  <TextView
      android:id="@+id/details_layout_tv_location"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:layout_marginTop="16dp"
      android:text="TextView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@+id/guideline2"
      app:layout_constraintTop_toBottomOf="@+id/details_layout_vehicle_info_label"
      />
  <TextView
      android:id="@+id/textView12"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/exterior_color"
      android:textAlignment="viewEnd"
      app:layout_constraintBaseline_toBaselineOf="@+id/details_layout_tv_exterior_color"
      app:layout_constraintEnd_toEndOf="@+id/textView10"
      app:layout_constraintStart_toStartOf="@+id/textView10"
      />
  <TextView
      android:id="@+id/details_layout_tv_exterior_color"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="TextView"
      app:layout_constraintEnd_toEndOf="@+id/details_layout_tv_location"
      app:layout_constraintStart_toStartOf="@+id/details_layout_tv_location"
      app:layout_constraintTop_toBottomOf="@+id/details_layout_tv_location"
      />
  <TextView
      android:id="@+id/textView14"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/interior_color"
      android:textAlignment="viewEnd"
      app:layout_constraintBaseline_toBaselineOf="@+id/details_layout_interio_color"
      app:layout_constraintEnd_toEndOf="@+id/textView12"
      app:layout_constraintStart_toStartOf="@+id/textView12"
      />
  <TextView
      android:id="@+id/details_layout_interio_color"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:text="TextView"
      app:layout_constraintEnd_toEndOf="@+id/details_layout_tv_exterior_color"
      app:layout_constraintStart_toStartOf="@+id/details_layout_tv_exterior_color"
      app:layout_constraintTop_toBottomOf="@+id/details_layout_tv_exterior_color"
      />
  <TextView
      android:id="@+id/textView16"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/drive_type"
      android:textAlignment="viewEnd"
      app:layout_constraintBaseline_toBaselineOf="@+id/details_layout_drive_type"
      app:layout_constraintEnd_toEndOf="@+id/textView14"
      app:layout_constraintHorizontal_bias="0.758"
      app:layout_constraintStart_toStartOf="@+id/textView14"
      />
  <TextView
      android:id="@+id/details_layout_drive_type"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="TextView"
      app:layout_constraintEnd_toEndOf="@+id/details_layout_interio_color"
      app:layout_constraintStart_toStartOf="@+id/details_layout_interio_color"
      app:layout_constraintTop_toBottomOf="@+id/details_layout_interio_color"
      />
  <TextView
      android:id="@+id/details_layout_tv_transmission"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/transmission"
      android:textAlignment="viewEnd"
      app:layout_constraintBaseline_toBaselineOf="@+id/textView19"
      app:layout_constraintEnd_toEndOf="@+id/textView16"
      app:layout_constraintStart_toStartOf="@+id/textView16"
      />
  <TextView
      android:id="@+id/textView19"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginTop="16dp"
      android:text="TextView"
      app:layout_constraintEnd_toEndOf="@+id/details_layout_drive_type"
      app:layout_constraintStart_toStartOf="@+id/details_layout_drive_type"
      app:layout_constraintTop_toBottomOf="@+id/details_layout_drive_type"
      />
  <TextView
      android:id="@+id/details_layout_tv_body"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="TextView"
      app:layout_constraintEnd_toEndOf="@+id/textView19"
      app:layout_constraintStart_toStartOf="@+id/textView19"
      app:layout_constraintTop_toBottomOf="@+id/textView19"
      />
  <TextView
      android:id="@+id/textView21"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/body"
      android:textAlignment="viewEnd"
      app:layout_constraintBaseline_toBaselineOf="@+id/details_layout_tv_body"
      app:layout_constraintEnd_toEndOf="@+id/details_layout_tv_transmission"
      app:layout_constraintStart_toStartOf="@+id/details_layout_tv_transmission"
      />
  <TextView
      android:id="@+id/textView22"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/engine"
      android:textAlignment="viewEnd"
      app:layout_constraintBaseline_toBaselineOf="@+id/details_layout_tv_engine"
      app:layout_constraintEnd_toEndOf="@+id/textView21"
      app:layout_constraintStart_toStartOf="@+id/textView21"
      />
  <TextView
      android:id="@+id/details_layout_tv_engine"
      android:layout_width="0dp"
      android:layout_height="24dp"
      android:layout_marginTop="16dp"
      android:text="TextView"
      app:layout_constraintEnd_toEndOf="@+id/details_layout_tv_body"
      app:layout_constraintStart_toStartOf="@+id/details_layout_tv_body"
      app:layout_constraintTop_toBottomOf="@+id/details_layout_tv_body"
      />
  <TextView
      android:id="@+id/details_layout_tv_fuel"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="TextView"
      app:layout_constraintEnd_toEndOf="@+id/details_layout_tv_engine"
      app:layout_constraintStart_toStartOf="@+id/details_layout_tv_engine"
      app:layout_constraintTop_toBottomOf="@+id/details_layout_tv_engine"
      />
  <TextView
      android:id="@+id/textView25"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/fuel"
      android:textAlignment="viewEnd"
      app:layout_constraintBaseline_toBaselineOf="@+id/details_layout_tv_fuel"
      app:layout_constraintEnd_toEndOf="@+id/textView22"
      app:layout_constraintStart_toStartOf="@+id/textView22"
      />
  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_begin="173dp"
      />

</androidx.constraintlayout.widget.ConstraintLayout>